🐝 HIVEMIND v1.0 - Decentralized AI Network
- Real AI inference with PyTorch/Transformers
- 3 models downloaded: TinyLlama, Llama 3.2, Qwen 2.5
- P2P Server and Worker for distributed inference
- Storage sharding (3GB -> 3MB with 1000 peers)
- One-command startup: ./hivemind.sh
- Cloud deployment scripts ready

--- a/docker/runtime/Dockerfile
+++ b/docker/runtime/Dockerfile
@@ -1,17 +1,33 @@
 # HIVEMIND Runtime Docker Image
-# Lightweight container for executing AI tasks with resource limits
+# Full container for executing AI tasks with PyTorch + Transformers
 
-FROM node:20-alpine
+FROM python:3.11-slim
 
-# Install Python and PyTorch for model inference
-RUN apk add --no-cache python3 py3-pip && \
-    pip3 install --no-cache-dir torch transformers accelerate
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    git \
+    curl \
+    build-essential \
+    && rm -rf /var/lib/apt/lists/*
 
+# Install Node.js (needed for task runner)
+RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
+    && apt-get install -y nodejs
+
+# Install Python ML libraries
+RUN pip install --no-cache-dir \
+    torch==2.1.0 \
+    transformers==4.36.0 \
+    accelerate \
+    sentence-transformers \
+    huggingface-hub \
+    psutil
+
+# Set working directory
 WORKDIR /app
 
 # Create non-root user for security
-RUN addgroup -g 1000 hive && \
-    adduser -u 1000 -G hive -s /bin/sh -D hive
+RUN groupadd -r hive && useradd -r -g hive -s /bin/sh hive
 
 # Copy task execution script
 COPY task-runner.js .
@@ -22,5 +38,5 @@ RUN chown -R hive:hive /app
 # Switch to non-root user
 USER hive
 
-# Run task when container starts
+# Default command
 CMD ["node", "task-runner.js"]
